--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.2",
     "next": "^13.1.6",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
