--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-radio-group": "^1.1.1",
     "next": "^13.1.6",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
