--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-radio-group": "^1.1.1",
     "next": "^13.1.6",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.6"
+    "react-hook-form": "^7.43.0",
+    "styled-components": "^5.3.6",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "json-server": "^0.17.1"
