--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "dev:server": "json-server server.json -p 3000 -w -d 500"
+    "dev:server": "json-server server.json -p 3000 -w -d 500",
+    "lint": "eslint src --ext .tsx,.ts",
+    "lint:fix": "eslint src --ext .tsx,.ts --fix"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +26,8 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.2.0",
+    "eslint": "^8.33.0",
     "json-server": "^0.17.1"
   }
 }
